# website

./: .gitignore  .travis.yml  404.html  CNAME  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  appspec.yml  atom.xml  build-release.sh  buildspec.yml  config.toml  create-version-tag.sh  flake.nix  giallo-dark.css  index.html  package-lock.json  package.json  print.css  release.toml  renovate.json  robots.txt  rss.xml  rust-toolchain  search_index.en.js  serverless.yml  site.css  sitemap.xml
.github/: dependabot.yml
.github/workflows/: deploy.yml  main.yml  publish.yml  rust.yml  test.yml
about/: index.html
blog/: index.html
blog/2022/: index.html
contact/: index.html
content/: _index.md
content/about/: index.md
content/blog/: _index.md
content/contact/: _index.md  index.md
content/projects/: _index.md  astro-node-fastify.md  lcov-parser.md  searproxy.md  typescript-postmessagehandler.md
page/1/: index.html
projects/: index.html
projects/astro-node-fastify/: index.html
projects/lcov-parser/: index.html
projects/lib-tcstring/: index.html
projects/searproxy/: index.html
projects/typescript-postmessagehandler/: index.html
sass/: _fonts.scss  _reset.scss  _theme.scss  _variables.scss  print.scss  site.scss
sass/abstracts/: _functions.scss  _mixins.scss
sass/accessibility/: _reduced-motion.scss
src/: asset_request.rs  assets.rs  constants.rs  main.rs  render.rs  routes.rs  site_request.rs  util.rs
static/: giallo-light.css
templates/: 404.html  base.html  index.html  macros.html  page.html  robots.txt  section.html
(+46 files in other folders)
