[package]
name = "website"
edition = "2018"
version = "1.0.16"
authors = ["Friedemann Sommer <contact@friedemannsommer.com>"]

[[bin]]
name = "website"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
handlebars = "3.2.1"
lazy_static = "1.4.0"
serde_json = "1.0.55"
html-minifier = "1.2.2"
rust-crypto = "0.2.36"
data-encoding = "2.2.1"
