[package]
name = "website"
edition = "2018"
version = "1.0.16"
authors = ["Friedemann Sommer <contact@friedemannsommer.com>"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16

[[bin]]
name = "website"
path = "src/main.rs"

[dependencies]
base64 = "0.13.0"
horrorshow = "0.8.3"
lambda_http = "0.3.0"
lazy_static = "1.4.0"
rust-crypto = "0.2.36"
tokio = "1.8.0"